--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
                 <h2 class="text-xl font-semibold mb-10">Select Your Seat</h2>
                 <hr class="w-4 bg-dark" />
                 <hr />
-                <div class="bg-[#0307121A]">
+                <div class="bg-[#0307121A] rounded-xl">
                   <div>
-                    <table class="table mt-10" id="passengersTable">
+                    <table class="table mt-10 rounded-xl" id="passengersTable">
                       <!-- head -->
                       <thead>
                         <tr>
@@ -385,11 +385,11 @@
                       <tbody id="tableBody"></tbody>
                       <tfoot>
                         <tr>
-                          <td class="text-xl font-bold text-black">
+                          <td class=" font-bold text-black">
                             Total Price
                           </td>
                           <td></td>
-                          <td class="text-xl font-bold text-black">
+                          <td class=" font-bold text-black">
                             BDT
                             <span class="text-black" id="totalPrice">0</span>
                           </td>
@@ -415,11 +415,11 @@
                           </td>
                         </tr>
                         <tr>
-                          <td class="text-xl font-bold text-black">
+                          <td class="font-bold text-black">
                             Grand Price
                           </td>
                           <td></td>
-                          <td class="text-xl font-bold text-black">
+                          <td class="font-bold text-black">
                             BDT <span id="grandTotal">0</span>
                           </td>
                         </tr>
